project(engine)

include(../WASM/Definitions.cmake)

set(CEXENTRY_DIRECTORY ${CSPRO_DIRECTORY}/CEXEntry)
set(ZCAPIO_DIRECTORY ${CSPRO_DIRECTORY}/zCapiO)
set(ZENTRYO_DIRECTORY ${CSPRO_DIRECTORY}/zEntryO)
set(ZISSALIB_DIRECTORY ${CSPRO_DIRECTORY}/zIssaLib)

include_directories(${PROJECT_NAME} PUBLIC
    ${EXTERNAL_DIRECTORY}
    ${EXTERNAL_DIRECTORY}/geometry.hpp/include
    ${EXTERNAL_DIRECTORY}/jsoncons
    ${EXTERNAL_DIRECTORY}/variant/include
    ${EXTERNAL_DIRECTORY}/yaml-cpp/include
)

add_library(${PROJECT_NAME}
    Applload.cpp
    citer.cpp
    Common.cpp
    Decorr.cpp
    engdrv.cpp
    EngineExecutor.cpp
    Exappl.cpp
    Exapplva.cpp
    Exopfile.cpp
    Form.cpp
    gpsfuncs.cpp
    Int_set.cpp
    IntActionInvoker.cpp
    IntArray.cpp
    IntAudio.cpp
    IntBarcode.cpp
    intcapi.cpp
    IntCase.cpp
    Intchars.cpp
    IntCompression.cpp
    IntDataAccess.cpp
    IntDate.cpp
    Intdentr.cpp
    IntDiagnostics.cpp
    IntDocument.cpp
    Intdrive.cpp
    IntDynamicLogicEvaluation.cpp
    intenter.cpp
    InterpreterAccessor.cpp
    Intexpr.cpp
    Intextdi.cpp
    IntFreq.cpp
    Intfuncs.cpp
    IntGeometry.cpp
    IntHashMap.cpp
    IntHtmlDialog.cpp
    IntImage.cpp
    IntImpute.cpp
    Intinstr.cpp
	IntItem.cpp
    IntJson.cpp
    IntLanguage.cpp
    IntList.cpp
    IntLocalhost.cpp
    IntMap.cpp
    IntMath.cpp
    IntMessages.cpp
    IntOccurrences.cpp
    IntPath.cpp
    IntPff.cpp
    IntPre77Report.cpp
    IntProgramControl.cpp
    IntProperties.cpp
    IntQuery.cpp
    IntReport.cpp
    IntString.cpp
    IntSwitch.cpp
    IntSymbol.cpp
    IntSync.cpp
    IntSystemApp.cpp
    IntUserbar.cpp
    IntUserFunction.cpp
    IntUserInterface.cpp
    IntValues.cpp
    IntVariable.cpp
    Issafunc.cpp
    Listing.cpp
    LoadSaveBinary.cpp
    Messages.cpp
    Nextnode.cpp
    ParadataDriver.cpp
    ParameterManager.cpp
    Pre80Routines.cpp
    QuestionTextParamCache.cpp
    relt.cpp
    Settings.cpp
    subtable.cpp
    SyncListener.cpp
    Tables.cpp
    Tablesen.cpp
    VariableInOut.cpp

    ${CEXENTRY_DIRECTORY}/DeWrite.cpp
    ${CEXENTRY_DIRECTORY}/Dicx.cpp
    ${CEXENTRY_DIRECTORY}/Entifaz.cpp
    ${CEXENTRY_DIRECTORY}/Relation.cpp
    ${CEXENTRY_DIRECTORY}/Secx.cpp
    ${CEXENTRY_DIRECTORY}/Varx.cpp

    ${ZCAPIO_DIRECTORY}/Capi.cpp
    ${ZCAPIO_DIRECTORY}/CapiCondition.cpp
    ${ZCAPIO_DIRECTORY}/CapiFill.cpp
    ${ZCAPIO_DIRECTORY}/CapiQuestion.cpp
    ${ZCAPIO_DIRECTORY}/CapiQuestionFilePre76.cpp
    ${ZCAPIO_DIRECTORY}/CapiQuestionManager.cpp
    ${ZCAPIO_DIRECTORY}/CapiQuestionYaml.cpp
    ${ZCAPIO_DIRECTORY}/CapiStyle.cpp
    ${ZCAPIO_DIRECTORY}/CapiText.cpp

    ${ZENTRYO_DIRECTORY}/CapiContentVirtualFileMapping.cpp
    ${ZENTRYO_DIRECTORY}/CaseTreeBuilder.cpp
    ${ZENTRYO_DIRECTORY}/CaseTreeNode.cpp
    ${ZENTRYO_DIRECTORY}/CaseTreeUpdate.cpp
    ${ZENTRYO_DIRECTORY}/CoreEntryEngineInterface.cpp
    ${ZENTRYO_DIRECTORY}/CoreEntryPage.cpp
    ${ZENTRYO_DIRECTORY}/CoreEntryPageField.cpp
    ${ZENTRYO_DIRECTORY}/DeploymentPackageDownloader.cpp
    ${ZENTRYO_DIRECTORY}/EntDrv.cpp
    ${ZENTRYO_DIRECTORY}/LevelNodeProcessing.cpp
    ${ZENTRYO_DIRECTORY}/RunAple.cpp
    ${ZENTRYO_DIRECTORY}/WEXEntry.cpp

    ${ZISSALIB_DIRECTORY}/Attr.cpp
    ${ZISSALIB_DIRECTORY}/CFlAdmin.cpp
    ${ZISSALIB_DIRECTORY}/CFlow.cpp
    ${ZISSALIB_DIRECTORY}/CsDriver.cpp
    ${ZISSALIB_DIRECTORY}/CsDriver1.cpp
    ${ZISSALIB_DIRECTORY}/CsKernel.cpp
    ${ZISSALIB_DIRECTORY}/Defuncs.cpp
    ${ZISSALIB_DIRECTORY}/Dict.cpp
    ${ZISSALIB_DIRECTORY}/Dictload.cpp
    ${ZISSALIB_DIRECTORY}/EngineAccessor.cpp
    ${ZISSALIB_DIRECTORY}/EngineLoader.cpp
    ${ZISSALIB_DIRECTORY}/Exallocd.cpp
    ${ZISSALIB_DIRECTORY}/Exapplfu.cpp
    ${ZISSALIB_DIRECTORY}/Exapplin.cpp
    ${ZISSALIB_DIRECTORY}/ExNotes.cpp
    ${ZISSALIB_DIRECTORY}/FlowCore.cpp
    ${ZISSALIB_DIRECTORY}/FlowLoad.cpp
    ${ZISSALIB_DIRECTORY}/Form2.cpp
    ${ZISSALIB_DIRECTORY}/GroupT.cpp
    ${ZISSALIB_DIRECTORY}/GroupT2.cpp
    ${ZISSALIB_DIRECTORY}/GroupVisitor.cpp
    ${ZISSALIB_DIRECTORY}/Labsalo.cpp
    ${ZISSALIB_DIRECTORY}/OccurrenceInfo.cpp
    ${ZISSALIB_DIRECTORY}/OccurrenceInfoSet.cpp
    ${ZISSALIB_DIRECTORY}/OccurrenceVisitor.cpp
    ${ZISSALIB_DIRECTORY}/SecT.cpp
    ${ZISSALIB_DIRECTORY}/VarT.cpp
)
